--- a/aula-13/checkpoint-1/styles.css
+++ b/aula-13/checkpoint-1/styles.css
@@ -11,13 +11,6 @@
 
 }
 
-body {
-
-    background-color: #202020;
-    width: 100%;
-
-}
-
 .main-header {
 
     background-color: #2a8014;
@@ -32,8 +25,7 @@ body {
 .main-header img {
 
     width: 80px;
-    /* border-radius: 20%; */
-
+    
 }
 
 .main-header ul {
@@ -45,7 +37,7 @@ body {
 
 .main-header ul a {
 
-    color: rgba(255, 255, 255, 0.739);
+    color: #ffffffbc;
     font-size: 20px;
     text-decoration: none;
     font-weight: 300;
@@ -54,39 +46,37 @@ body {
 
 .main-content section {
 
-    color: white;
+    color: #ffffff;
 
 }
 
 .main-content .home h1 {
 
+    background-color: #202020;
     padding: 24px;
+
+}
+
+.main-content p {
+
+    color: #474242;
+    text-align: center;
 
 }
 
 .main-content .curiosidades h1 {
 
-    padding: 24px;
-
-}
-
-.main-content img {
-
-    position: relative;
-    top: 0px;
-    left: 0px;
-    bottom: 0;
-    right: 0;
-    /* width: 1280px; */
-    width: 100%;
-    height: 532px;
+    padding: 70px;
 
 }
 
 .main-content .home {
 
-    height: 100vh;
-    background-color: #101010;
+    background-image: url('https://www.turismoecia.net/wp-content/uploads/2020/02/Rio-Branco-2.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 532px;
 
 }
 
@@ -100,19 +90,11 @@ div .card-curiosidades img {
 
     width: 320px;
     height: 400px;
-    margin: 60px;
+    margin: 40px;
     border-radius: 12px;
     display: inline-block;
 
 }
-
-/* .curiosidades .cards section {
-
-    background-color: aliceblue;
-    width: 600px;
-    height: 800px;
-
-} */
 
 .main-content .video {
 
@@ -125,6 +107,7 @@ div .card-curiosidades img {
     padding: 24px;
 
 }
+
 
 @media (max-width: 768px) {
 
