--- a/aula-13/style.css
+++ b/aula-13/style.css
@@ -23,6 +23,8 @@ body {
     height: fit-content;
     display: flex;
     justify-content: space-between;
+    position: sticky;
+    top: 0;
 
 }
 
